const translation = {
  common: {
    ok: 'OK!',
    exit: 'Exit',
    cancel: 'Cancel',
    back: 'Back',
    'select-an-item': 'Select an item',
    'date-placeholder': 'eg: 25/12/2021',
    save: 'Save',
    empty_list_message: 'Empty List',
    province: 'Province',
    district: 'District/Municipality',
    zone: 'Village/Neighborhood',
    'camera-add': 'Add',
    remove: 'remove',
    'camera-preview': 'Preview',
    thumbnail: 'Thumbnail',
    'preview-image': 'Preview',
    locality: 'Locality',
    project: 'Project',
    name: 'Name',
  },
  'context-menu': {
    'view-action-plan': 'View action plan',
    'view-monitoring-visit': 'View montoring visits',
  },
  login: {
    username: 'Username',
    password: 'Password',
    error: {
      timeout: 'Could not connect, check your internet connection',
      'cannot-connect': 'Could not connect, check your internet connection',
      canceled: 'Could not connect, check your internet connection',
      server: 'Could not connect, check your internet connection',
      unauthorized: 'You are not authenticated, please login',
      forbidden: 'Your connection has expired, please login again',
      'not-found': 'Your credentials are invalid, please try again',
    },
  },
  errors: {
    invalidEmail: 'Invalid email address.',
  },
  settings: {
    title: 'Settings',
  },
  'civic-incubator-details-participants-tab': {
    title: 'Participants',
    search: 'Search participant',
    'add-participant': 'Add participant',
    'participant-item': '%{item} participant',
  },
  'civic-incubator-details-events-tab': {
    title: 'Lectures',
    search: 'Search lecture',
    'add-participant': 'Add participant',
    'add-event': 'Create event',
  },
  'peace-ambassadors-and-vdo': {
    vdo: {
      title: 'VDO',
    },
    'peace-ambassadors': {
      title: 'Peace Ambassadors',
    },
    new: 'New',
  },
  'peace-ambassadors-and-vdo-details': {
    members: 'Members',
    actions: 'Actions',
    'add-member': 'Add member',
    'add-action': 'Add action',
    vdo: {
      title: 'VDO Details',
    },
    'peace-ambassadors': {
      title: 'Peace Ambassadors Details',
    },
  },
  'new-peace-ambassadors-and-vdo': {
    vdo: {
      title: 'New VDO',
    },
    'peace-ambassadors': {
      title: 'New Peace Ambassadors',
    },
    'group-code': 'Group Code',
    'date-of-constitution': 'Date of constitution',
    'number-of-active-members': 'Number of active members',
    'number-of-members': 'Number of Members',
  },
  home: {
    title: 'Home',
    vdo: 'VDO',
    'civic-incubators': 'Civic Incubators',
    'group-savings': 'Saving Groups',
    'peace-ambassadors': 'Peace Ambassadors',
    'my-tasks': 'My Tasks',
  },
  sync: {
    title: 'Synchronize',
  },
  stats: {
    title: 'Stats',
  },
  search: {
    title: 'Search',
  },
  'savings-group': {
    title: 'Savings Groups',
    'z_cycle-duration': 'Cycle duration: ',
    'cycle-duration': {
      zero: 'No cycle duration',
      one: 'Cycle duration: 1 day',
      others: 'Cycle duration: %{count} days',
    },
    'number-of-cycles': {
      zero: 'No cycles',
      one: '1 Cycle',
      others: '%{count} Cycles',
    },
    'z_number-of-cycles': ' Cycles',
  },
  'civic-incubators': {
    title: 'Civic Incubators',
    search: 'Search Civic Incubators',
    'item-label': 'Civic incubator item',
    'delete-item-label': 'Delete civic incubator item',
  },
  'new-civic-incubator': {
    title: 'New Civic incubator',
    productName: 'Civic incubator name',
    province: 'Province',
    district: 'District',
    locality: 'Locality',
    longitude: 'Longitude',
    latitude: 'latitude',
    'admin-post': 'Administrative Post',
    'date-constitution': 'Date of Constituition',
  },
  'civic-incubator-details': {
    title: 'Incubator Details',
  },
  'savings-group-details-monitoring-tab': {
    title: 'Monitoring',
    'add-monitoring': 'Add Monitoring',
  },
  'savings-group-details-members-tab': {
    title: 'Members',
    'add-member': 'Add Member',
    monitoring: 'monitor',
    quitting: 'quit',
  },
  'action-plan': {
    title: 'Action plan',
    add: 'Add action plan',
  },
  'monitoring-visits': {
    title: 'Monitoring visits',
    add: 'Add monitoring visit',
  },
  form: {
    error_retry:
      'Something went wrong, check if everything is ok and try again',
    'next-page': 'Next',
    'prev-page': 'Previous',
    submit: 'Finish',
    'savings-group-member-quitting': {
      title: 'Quitting',
      motivation: 'Motivation',
      date: 'Date',
    },
    cycles: {
      title: 'Cycles',
      'cycles-name': 'Name',
      'cycles-start-date': 'start Date',
      'cycles-end-date': 'End date',
    },
    'savings-group-member-monitoring': {
      title: 'Monitoring',
      'social-fund-contribuition': 'Has contribuited to social fund',
      'interest-value': 'Interest value',
      'loan-value': 'Loan value',
      'saved-value': 'Saved value',
      date: 'Date',
    },

    'monitoring-visits': {
      title: 'Monitoring visits',
      date: 'Date of visit',
      type: 'Type of visit',
      motive: 'Motive',
    },
    'report-action-plan-progress': {
      title: 'Report',
      'start-date': 'Real start date',
      'end-date': 'Real end date',
      'done-ratio': 'Progress percentage',
      observations: 'Observations',
    },
    'action-plan': {
      title: 'Action plan',
      'start-date': 'Start date',
      'end-date': 'End date',
      name: 'Name',
    },
    'savings-group': {
      title: 'New Savings Group',
      province: 'Province',
      district: 'District/Municipality',
      'select-province': 'Select a province',
      zone: 'Village/Neighborhood',
      'date-of-constitution': 'Date of constitution',
      'social-fund-value': 'Social fund value',
      'fine-value': 'Fine value',
      'interests-fee': 'Interest fee',
      name: 'Name',
      'number-of-active-members': 'Number of active members',
      'number-of-members': 'Number of Members',
      'number-of-cycles': 'Number of Cycles',
    },
    'civic-incubator-events': {
      title: 'New Lecture',
      realization_date: 'Realization Date',
      type: 'Section Type',
      type_other: 'Section Type',
      name: 'Section Name',
      subject: 'Subject',
      coordinator: 'Coordinator | Speaker',
      number_of_participants_male: 'Number of young participants (Male)',
      number_of_participants_female: 'Number of young participants (Female)',
      developed_actions: 'Developed actions',
      action_results: 'Action results',
      action_results_other: 'Action results',
      observations: 'Observations',
    },
    'civic-incubator-participant': {
      title: 'New Participant',
      'birth-date': 'Date of Birth',
      'first-name': 'First Name',
      'last-name': 'Last Name',
      gender: 'Gender',
      'education-level': 'Education level',
      'marital-status': 'Marital status',
      occupation: 'Occupation',
      conhecimentoIncubadora: 'Where did you heard about the civic incubator?',
      conhecimentoEspaco: 'Do you engage on the spaces?',
      participacaoEspaco: 'Engagement spaces',
      actividadePolitica: 'Do you envelve on politics?',
      observations: 'Comments',
    },
    'task-diary': {
      title: 'Task diary',
      'step-1': 'Task Details',
      name: 'Task name',
      'task-objetive': 'Task objetive',
      'date-start': 'Starting date',
      'date-end': 'Ending date',
      'spended-hours': 'Spended hours',
      'execution-percentage': 'Execution percentage',
      'step-2': 'Achived results and learned lessons',
      'meeting-description': 'Meeting Description',
      'imidiact-result': 'What was the imidiact result',
      'who-to-inform': 'Who would you like to inform/influence',
      'challenges-n-lesson': 'Faced challenges and learned lessons',
      'next-steps': 'Next steps',
      'masc-contribuition': 'Is there somo contibuition expected from MASC',
      'step-3': 'Means of evindence verification',
      'evidence-type': 'Type of evidence',
      'verification-methods': 'Verification methods',
      'number-of-males': 'Number of participants - males',
      'number-of-females': 'Number of participants - females',
      'generic-comments': 'Generic comments',
      'text-evidences': 'Evidences',
      'image-evidences': 'Evidences',
      'step-4': 'Indicators and Goals',
      indicator: 'Indicator',
      goal: 'Goal',
      'type-of-goal': 'Type of goal',
      'verification-source': 'Verification sources',
      realized: 'Realized',
      Evidences: 'Evidences',
      Upload: 'Upload',
    },
    'pa-or-vdo-member': {
      title: 'Peace Ambassadors and VDO',
      'first-name': 'First Name',
      'last-name': 'Last Name',
      occupation: 'Occupation',
      'education-level': 'Education level',
      'member-code': 'Member code',
      'marital-status': 'Marital status',
      function: 'Function',
      'active-member': 'Is Active Member',
      'why-gave-up': 'Why Gave Up',
    },
    'pa-or-vdo-action': {
      title: 'Register action',
      'realization-date': 'Realization date',
      type: 'Action type',
      name: 'Action name',
      goal: 'Action goal',
      coordinator: 'Action coordinator',
      observations: 'Observations',
      number_of_participants_male: 'Number of young participants (Male)',
      number_of_participants_female: 'Number of young participants (Female)',
    },

    'savings-group-monitoring': {
      title: 'Savings Group monitoring',
      cycle: 'Cycle',
      'gained-interest-savings': 'Gained  interests (Savings)',
      'gained-interest-social-fund': 'Gained interests (Social fund)',
      'cooperative-evolution': 'Evelved to cooperative?',
      'cooperative-type': 'type of cooperative',
      'main-problems': 'Main problems pointed out by the group',
    },
    'savings-group-member': {
      title: 'Savings Group member',
      'step-1': 'Beneficiary',
      'first-name': 'First Name',
      'last-name': 'Last Name',
      'birth-date': 'Date of Birth',
      'marital-status': 'Marital status',
      'education-level': 'Education level',
      'number-of-children': 'Number of children',
      'living-with-parents': 'Living with parents?',
      zone: 'Village/Neighborhood',
      'available-wealth': 'What are your goods (wealth) ?',
      'active-member': 'Is Active Member',
      'why-gave-up': 'Why Gave Up?',
      'step-2': 'Savings',
      cycle: 'Cycle',
      'savings-value': 'Savings value',
      'loan-value': 'Loan value',
      'loan-interests': 'loan interest rate',
      'fine-value': 'Fine value',
      'social-fund-value': 'Social fund value',
      'business-activity': 'Income business activity',
      'savings-application': 'Savings application',
      'previous-credit-benefit':
        'Have ever benefited from other form of credit?',
    },
  },
  'my-tasks': {
    title: 'My tasks',
    pending: 'Pending',
    finished: 'Finished',
    'pending-task': 'Pending task',
    'pending-task-item': 'Pending task item',
    'finished-task': 'Finished task',
    'finished-task-item': 'Finished task item',
    'search-tasks': 'Search tasks',
  },
  error: {
    title: 'Something went wrong!',
    friendlySubtitle:
      "This is the screen that your users will see in production when an error is thrown. You'll want to customize this message (located in `app/i18n/en.json`) and probably the layout as well (`app/screens/error`). If you want to remove this entirely, check `app/app.tsx` for the <ErrorBoundary> component.",
    traceTitle: 'Error from %{name} stack',
    reset: 'RESET APP',
  },
  storybook: {
    placeholder: 'Placeholder',
    field: 'Field',
  },
};

export type TranslationLang = typeof translation;
export default translation;
